# pratt-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: parser.h  scanner.h
src/: main.c  parser.c  scanner.c
tests/: tests.c
